--- a/Main/Abastena/login.html
+++ b/Main/Abastena/login.html
@@ -79,7 +79,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<div class="form-actions">
 			<button type="submit" class="btn btn-success uppercase">ENTRAR</button>
 			<label class="rememberme check">
-			<input type="checkbox" name="remember" value="1"/>Lembrar</label>
+			<input type="checkbox" name="remember" value="1"/>Lembrar-me</label>
 			<a href="javascript:;" id="forget-password" class="forget-password">Recuperar Password?</a>
 		</div>
 
