--- a/Main/Abastena/index.html
+++ b/Main/Abastena/index.html
@@ -262,29 +262,23 @@
 							</li>
 							<li>
 								<a href="page_calendar.html">
-								<i class="icon-calendar"></i> My Calendar </a>
+								<i class="icon-bell"></i> Notificações </a>
 							</li>
 							<li>
 								<a href="inbox.html">
-								<i class="icon-envelope-open"></i> My Inbox <span class="badge badge-danger">
-								3 </span>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:;">
-								<i class="icon-rocket"></i> My Tasks <span class="badge badge-success">
-								7 </span>
+								<i class="icon-envelope-open"></i> Caixa Mensagens <span class="badge badge-danger">
+								2 </span>
 								</a>
 							</li>
 							<li class="divider">
 							</li>
 							<li>
 								<a href="extra_lock.html">
-								<i class="icon-lock"></i> Lock Screen </a>
+								<i class="icon-lock"></i> Bloquear Conta </a>
 							</li>
 							<li>
 								<a href="login.html">
-								<i class="icon-key"></i> Log Out </a>
+								<i class="icon-key"></i> Sair </a>
 							</li>
 						</ul>
 					</li>
@@ -307,7 +301,7 @@
 			<!-- BEGIN HEADER SEARCH BOX -->
 			<form class="search-form" action="extra_search.html" method="GET">
 				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Search" name="query">
+					<input type="text" class="form-control" placeholder="Procurar" name="query">
 					<span class="input-group-btn">
 					<a href="javascript:;" class="btn submit"><i class="icon-magnifier"></i></a>
 					</span>
@@ -707,10 +701,6 @@
 							</li>
 						</ul>
 					</li>
-					<li class="menu-dropdown">
-						<a href="angularjs" target="_blank" class="tooltips" data-container="body" data-placement="bottom" data-html="true" data-original-title="AngularJS version demo">
-						AngularJS Version </a>
-					</li>
 				</ul>
 			</div>
 			<!-- END MEGA MENU -->
@@ -1021,7 +1011,7 @@
 								<div class="portlet-input input-small input-inline">
 									<div class="input-icon right">
 										<i class="icon-magnifier"></i>
-										<input type="text" class="form-control form-control-solid" placeholder="search...">
+										<input type="text" class="form-control form-control-solid" placeholder="Procurar">
 									</div>
 								</div>
 							</div>
@@ -1349,7 +1339,7 @@
 								<div class="portlet-input input-inline input-small ">
 									<div class="input-icon right">
 										<i class="icon-magnifier"></i>
-										<input type="text" class="form-control form-control-solid" placeholder="search...">
+										<input type="text" class="form-control form-control-solid" placeholder="Procurar">
 									</div>
 								</div>
 							</div>
