--- a/Main/Abastena/user.html
+++ b/Main/Abastena/user.html
@@ -26,27 +26,27 @@
         <div class="profile-usermenu">
           <ul class="nav">
             <li>
-              <a href="extra_profile.html">
+              <a href="utilizador.php">
               <i class="icon-home"></i>
               Perfil </a>
             </li>
             <li class="active">
-              <a href="extra_profile_account.html">
+              <a href="utilizador.php">
               <i class="icon-settings"></i>
               Editar Conta </a>
             </li>
             <li>
-              <a href="page_todo.html" target="_blank">
+              <a href="listarmatas.php" target="_blank">
               <i class="icon-check"></i>
               Listar Matas </a>
             </li>
             <li>
-              <a href="page_todo.html" target="_blank">
+              <a href="#" target="_blank">
               <i class="icon-check"></i>
               Listar Notificações </a>
             </li>
             <li>
-              <a href="extra_profile_help.html">
+              <a href="#" target="_blank">
               <i class="icon-info"></i>
               Ajuda plataforma </a>
             </li>
