--- a/Main/Abastena/header.html
+++ b/Main/Abastena/header.html
@@ -2,6 +2,7 @@
   <div class="container">
     <!-- BEGIN LOGO -->
     <div class="page-logo">
+      <a href="index.php"><img width="120px" src="../../assets/admin/layout3/img/abastena-logo.png" /></a>
 
     </div>
     <!-- END LOGO -->
@@ -79,7 +80,7 @@
             <li>
               <ul class="dropdown-menu-list scroller" style="height: 275px;" data-handle-color="#637283">
                 <li>
-                  <a href="inbox.html?a=view">
+                  <a href="javascript:;">
                   <span class="photo">
                   <img src="../../assets/admin/layout3/img/avatar3.jpg" class="img-circle" alt="">
                   </span>
@@ -93,7 +94,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="inbox.html?a=view">
+                  <a href="javascript:;">
                   <span class="photo">
                   <img src="../../assets/admin/layout3/img/avatar3.jpg" class="img-circle" alt="">
                   </span>
@@ -123,11 +124,11 @@
               <i class="icon-user"></i> Meu Perfil </a>
             </li>
             <li>
-              <a href="page_calendar.html">
+              <a href="javascript:;">
               <i class="icon-bell"></i> Notificações </a>
             </li>
             <li>
-              <a href="inbox.html">
+              <a href="javascript:;">
               <i class="icon-envelope-open"></i> Caixa Mensagens <span class="badge badge-danger">
               2 </span>
               </a>
@@ -135,7 +136,7 @@
             <li class="divider">
             </li>
             <li>
-              <a href="extra_lock.html">
+              <a href="javascript:;">
               <i class="icon-lock"></i> Bloquear Conta </a>
             </li>
             <li>
