--- a/footer.html
+++ b/footer.html
@@ -4,55 +4,19 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-12 footer-block">
 				<h2>Rodapé #1</h2>
-				<p>
-					 Conteúdo 1
-				</p>
+
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs12 footer-block">
-				<h2>Newsletter Rodapé#2</h2>
-				<div class="subscribe-form">
-					<form action="javascript:;">
-						<div class="input-group">
-							<input type="text" placeholder="mail@email.com" class="form-control">
-							<span class="input-group-btn">
-							<button class="btn" type="submit">Enviar</button>
-							</span>
-						</div>
-					</form>
-				</div>
+				<h2> Rodapé#2</h2>
+
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-				<h2>Redes Sociais Rodapé#3</h2>
-				<ul class="social-icons">
-					<li>
-						<a href="javascript:;" data-original-title="rss" class="rss"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="facebook" class="facebook"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="twitter" class="twitter"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="googleplus" class="googleplus"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="linkedin" class="linkedin"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="youtube" class="youtube"></a>
-					</li>
-					<li>
-						<a href="javascript:;" data-original-title="vimeo" class="vimeo"></a>
-					</li>
-				</ul>
+				<h2>Rodapé#3</h2>
+
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-				<h2>Contactos Rodapé#4</h2>
-				<address class="margin-bottom-40">
-				 Telefone: 932 129 129<br>
-				 Email: <a href="mailto:mail@mail.com">mail@mail.com</a>
-				</address>
+				<h2>Rodapé#4</h2>
+
 			</div>
 		</div>
 	</div>
