--- a/menu.html
+++ b/menu.html
@@ -131,6 +131,14 @@
                   </li>
                 </ul>
               </div>
+              <div class="col-md-3">
+                <ul class="mega-menu-submenu">
+                  <li>
+                    <h3>Gestão de Riscos</h3>
+                  </li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </li>
