--- a/demo/index.html
+++ b/demo/index.html
@@ -1244,7 +1244,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<div class="container">
 				<!-- BEGIN PAGE BREADCRUMB -->
 				<ul class="page-breadcrumb breadcrumb">
-					<li><a href="#">Home</a> <i class="fa fa-circle"></i></li>
+					<li><a href="#" class="homelink">home</a> <i class="fa fa-circle"></i></li>
 					<li><a href="#">Portlets</a> <i class="fa fa-circle"></i></li>
 					<li class="active">General</li>
 				</ul>
