--- a/menu.html
+++ b/menu.html
@@ -396,5 +396,28 @@
         </li>
       </ul>
     </li>
+    <li class="menu-dropdown mega-menu-dropdown mega-menu-full ">
+      <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle">
+      Formulário <i class="fa fa-angle-down"></i>
+      </a>
+      <ul class="dropdown-menu">
+        <li>
+          <div class="mega-menu-content">
+            <div class="row">
+              <div class="col-md-5">
+                <ul class="mega-menu-submenu">
+
+                  <li>
+                    <a href="Formularios.php">
+                    <i class="fa fa-angle-right"></i>
+                      Listagem Formulários </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </li>
   </ul>
 </div>
